--- a/style.css
+++ b/style.css
@@ -369,3 +369,10 @@
     list-style: none;
     font-size: 155%;
   }
+
+  .info{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 155%;
+  }
