navbar and singapore cont responsive

--- a/style.css
+++ b/style.css
@@ -357,7 +357,78 @@
     background-color:#D4E9FF;
   }
 
-  
+  /* ==================================================================================================================================================== */
+  /* ==================================================================================================================================================== */
+  /* ==================================================================================================================================================== */
+  /* ====================================================================================================================================================n */
+  /* header onwards */
+
+
+  .nav_bar ul{
+    margin-left:10%;
+    margin-right:10%;
+    list-style-type: none;
+    overflow: hidden;
+    background-color: white;
+    font-size:150%;
+  }
+
+  .nav_bar li{
+    float: left;
+    background-color:white;
+  }
+
+  .nav_bar li a{
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  .nav_bar li a:hover{
+    background-color:#111;
+    color:white;
+  }
+
+  /* ==================================================================================================================================================== */
+  /* ==================================================================================================================================================== */
+  /* ==================================================================================================================================================== */
+  /* ====================================================================================================================================================n */
+  /* body onwards */
+
+  .container {
+    position: relative;
+    text-align: center;
+
+    color: white;
+  }
+
+
+  .top-left {
+    padding-top:2%;
+    padding-bottom:2%;
+    padding-left:5%;
+    padding-right:5%;
+    position: absolute;
+    top: 30%;
+    left: 10%;
+    background-color:black;
+    font-size:250%;
+    opacity:55%;
+  }
+
+.singapore_image{
+  width:80%;
+  height:55%;
+}
+
+  /* ==================================================================================================================================================== */
+  /* ==================================================================================================================================================== */
+  /* ==================================================================================================================================================== */
+  /* ====================================================================================================================================================n */
+  /* fact/API onwards */
+
   .fact_ul{
     justify-content: center;
     align-items: center;
@@ -377,6 +448,12 @@
     list-style: none;
     font-size: 155%;
   }
+
+  /* ==================================================================================================================================================== */
+  /* ==================================================================================================================================================== */
+  /* ==================================================================================================================================================== */
+  /* ====================================================================================================================================================n */
+  /* background onwards */
 
   .background_info{
     background-color:white;
@@ -474,8 +551,37 @@
 
   @media screen and (max-width:1000px){
 
+    /* navbar */
+    .nav_bar ul{
+      margin-left:0%;
+      margin-right:0%;
+    }
+
+    /* container */
+    .top-left {
+      padding-top:2%;
+      padding-bottom:2%;
+      top: 30%;
+      margin-left:-10%;
+    }
+  
+  .singapore_image{
+    width:100%;
+    height:55%;
+  }
+
 
     /* background header onwards */
+    .background_header{
+      margin-left:0%;
+      margin-right:0%;
+    }
+
+    .background_info{
+      margin-left:0%;
+      margin-right:0%;
+    }
+
     .background_image{
       width: 65%;
       height:75%;
@@ -511,6 +617,17 @@
 
   @media screen and (max-width:458px){
 
+    /* container */
+    .top-left {
+      top: 30%;
+      margin-left:-10%;
+      font-size:200%;
+    }
+  
+  .singapore_image{
+    width:100%;
+    height:40%;
+  }
 
     /* background header onwards */
     .background_header h1{
@@ -519,6 +636,18 @@
   }
 
   @media screen and (max-width:344px){
+
+    /* container */
+    .singapore_image{
+      width:100%;
+      height:30%;
+    }
+
+    .top-left {
+      top: 30%;
+      font-size:150%;
+    }
+
 
 
     /* background header onwards */
