--- a/style.css
+++ b/style.css
@@ -528,6 +528,53 @@
   /* ==================================================================================================================================================== */
   /* ==================================================================================================================================================== */
   /* ====================================================================================================================================================n */
+  /* recovered onwards */
+
+  .fact_recovered{
+    display:flex;
+    flex-wrap:wrap;
+    background-color:#B9C1DA;
+    opacity:90%;
+  }
+
+  .recovered_section{
+    flex: 50%;
+    max-width: 50%;
+  }
+
+  .healthy_image{
+    float:center;
+    width: 50%;
+    height:85%;
+    margin-left:37%;
+    margin-top: 4%;
+    opacity:90%;
+  }
+
+  .fact_ul_recovered li{
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    color:#FF7471;
+    margin-top:3%;
+    font-size:350%;
+    list-style-type: none;
+  }
+
+  .fact_ul_recovered h2{
+    background-color:#B9C1DA;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    color:black;
+    margin-top:7%;
+    margin-left:5;
+    font-size:250%;
+  }
+  
+
+  /* ==================================================================================================================================================== */
+  /* ==================================================================================================================================================== */
+  /* ==================================================================================================================================================== */
+  /* ====================================================================================================================================================n */
   /* background onwards */
 
   .background_info{
@@ -596,6 +643,10 @@
     .Info p{
       font-size:135%;
     }
+
+    /* Recovered */
+
+
       
 
   }
@@ -650,6 +701,16 @@
           font-size:200%;
           margin-top:11%;
         }
+
+        /* recovered */
+        .fact_ul_recovered li{
+          font-size:300%;
+        }
+
+        .fact_ul_recovered h2{
+          font-size:200%;
+          margin-top:11%;
+        }        
     
   }
 
@@ -721,6 +782,18 @@
     
   }
 
+  /* Recovered */
+
+  .fact_ul_recovered li{
+    font-size:250%;
+    margin-left:-10%;
+  }
+
+  .fact_ul_recovered h2{
+    margin-top:17%;
+    font-size:150%;
+    
+  }
 
 
     /* background header onwards */
@@ -791,7 +864,21 @@
         font-size:150%;
         margin-left:55%;
       }
-    
+
+      /* Recovered */
+
+      .healthy_image{
+        height:75%;
+      }
+
+  .fact_ul_recovered li{
+    font-size:200%;
+  }
+
+  .fact_ul_recovered h2{
+    margin-top:15%;
+    font-size:150%;
+  }   
   }
 
   @media screen and (max-width:703px){
@@ -869,17 +956,46 @@
   margin-bottom:10%;
 }
 
+/*recovered */
+.healthy_image{
+  width: 65%;
+  height:65%;
+  margin-left:18%;
+
+}
+
+.recovered_section{
+  flex: 100%;
+  max-width: 100%;
+}
+
+.fact_ul_recovered h2{
+  margin-left:110%;
+  font-size:155%;
+  margin-top:1%;
+  margin-bottom:10%;
+}
+
 @media screen and (max-width:531px){
+  /* Cases */
   .fact_ul_cases h2{
     margin-left:75%;
   }
 
+
+  /* Current */
   .fact_ul_current h2{
     margin-left:60%;
   }
   .fact_ul_current li{
     margin-left:1%;
   }
+
+
+  /* Recovered */
+  .fact_ul_recovered h2{
+    margin-left:75%;
+  } 
 }
 
 
@@ -891,9 +1007,16 @@
       margin-left:70%;
     }
 
+    /* Current */
+
     .fact_ul_current h2{
       margin-left:55%;
     }
+
+    /* Recovered */
+    .fact_ul_recovered h2{
+      margin-left:70%;
+    }    
   }
 
 
@@ -945,6 +1068,18 @@
         .fact_ul_current li{
           margin-left:0%;
         }
+
+    /*recovered*/
+    
+    .fact_ul_recovered h2{
+      margin-left:125px;
+      font-size:155%;
+      
+    }
+    
+    .fact_ul_recovered li{
+      margin-left:0%;
+    }        
   }
 
   @media screen and (max-width:344px){
@@ -988,6 +1123,19 @@
               .fact_ul_current li{
               margin-left:0%;
               }
+
+
+            /* Recovered */
+            
+            .fact_ul_recovered h2{
+              margin-left:75px;
+              font-size:155%;
+              
+            }
+            
+            .fact_ul_recovered li{
+              margin-left:0%;
+            }
 
 
 
